add kafka for communicate between product service and client service

--- a/Spring-gateway/src/main/resources/application.properties
+++ b/Spring-gateway/src/main/resources/application.properties
@@ -1,5 +1,29 @@
-spring.application.name=Spring-gateway
+#setting project name
+spring.application.name=api-gateway
+#setting port server running
 server.port=8080
+
+#setting url discovery server
 eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+
+#setting auto detect url
 spring.cloud.gateway.discovery.locator.enabled=true
+#setting cover lowercase for discovery server
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+management.endpoints.web.exposure.include=*
+
+
+#setting patten url
+spring.cloud.gateway.routes[0].id=product-service
+spring.cloud.gateway.routes[0].uri=lb://product-service
+spring.cloud.gateway.routes[0].predicates[0]=Path=/products/**
+
+spring.cloud.gateway.routes[1].id=order-service
+spring.cloud.gateway.routes[1].uri=lb://order-service
+spring.cloud.gateway.routes[1].predicates[0]=Path=/orders/**
+
+spring.cloud.gateway.routes[2].id=client-service
+spring.cloud.gateway.routes[2].uri=lb://client-service
+spring.cloud.gateway.routes[2].predicates[0]=Path=/clients/**
+
+management.tracing.sampling.probability=1.0
