--- a/Client/src/main/resources/application.properties
+++ b/Client/src/main/resources/application.properties
@@ -3,7 +3,9 @@ server.port=8083
 eureka.client.service-url.default-zone=http://localhost:8761/eureka/
 spring.datasource.url=jdbc:h2:mem:clientdb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=sa
 spring.h2.console.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+
+spring.kafka.bootstrap-servers=localhost:9092
+kafka.topic.topic1=topic1
