--- a/Spring-order/src/main/resources/application.properties
+++ b/Spring-order/src/main/resources/application.properties
@@ -4,6 +4,6 @@ eureka.client.service-url.default-zone=http://localhost:8761/eureka/
 spring.datasource.url=jdbc:h2:mem:orderdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=sa
 spring.h2.console.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
