--- a/Spring-product/src/main/resources/application.properties
+++ b/Spring-product/src/main/resources/application.properties
@@ -1,9 +1,18 @@
+#config port server
 server.port=8081
+#set name for project
 spring.application.name=product-service
-eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+
+#config DB -> H2
 spring.datasource.url=jdbc:h2:mem:productdb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.h2.console.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#setting h2 brower
+spring.h2.console.enabled=true
+
+#setting discovery server
+eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+
+
+spring.kafka.bootstrap-servers=localhost:9092
