add kafkatemplate sending and receive json object there is one error with product id

--- a/Client/src/main/resources/application.properties
+++ b/Client/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.kafka.bootstrap-servers=localhost:9092
 kafka.topic.topic1=topic1
+
+#spring.kafka.consumer.properties.spring.json.trusted.packages=com.example.Spring_product.Entity
+product.topic.name=product
