--- a/Spring-product/src/main/resources/application.properties
+++ b/Spring-product/src/main/resources/application.properties
@@ -16,3 +16,4 @@ eureka.client.service-url.default-zone=http://localhost:8761/eureka/
 
 
 spring.kafka.bootstrap-servers=localhost:9092
+product.topic.name=product
