update functional send multi type in 1 message

--- a/Spring-product/src/main/resources/application.properties
+++ b/Spring-product/src/main/resources/application.properties
@@ -17,3 +17,5 @@ eureka.client.service-url.default-zone=http://localhost:8761/eureka/
 
 spring.kafka.bootstrap-servers=localhost:9092
 product.topic.name=product
+
+multi-type.topic.name=multiType
