add functional community between product and order service with kafka send message in transaction. there is 1 error when send message offset +2

--- a/Client/src/main/resources/application.properties
+++ b/Client/src/main/resources/application.properties
@@ -8,7 +8,10 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 
 spring.kafka.bootstrap-servers=localhost:9092
-kafka.topic.topic1=topic1
 
+#kafka topic name
+topic1.topic.name=topic1
+topic2.topic.name=
+multi-type.topic.name=multiType
 #spring.kafka.consumer.properties.spring.json.trusted.packages=com.example.Spring_product.Entity
 product.topic.name=product
