--- a/Spring-order/src/main/resources/application.properties
+++ b/Spring-order/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.username=sa
 spring.datasource.password=sa
 spring.h2.console.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+
+spring.kafka.bootstrap-servers=localhost:9092
