--- a/Spring-order/build.gradle
+++ b/Spring-order/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	runtimeOnly 'com.h2database:h2'
+	implementation 'org.springframework.kafka:spring-kafka'
 }
 
 dependencyManagement {
